<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/plusMinusButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_custom_button"
        android:text="@string/text_plus_minus"
        android:textColor="@color/purple_text_button"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toTopOf="@+id/eightButton"
        app:layout_constraintEnd_toStartOf="@+id/percentButton"
        app:layout_constraintStart_toEndOf="@+id/AcButton"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />

    <Button
        android:id="@+id/percentButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_custom_button"
        android:text="@string/text_percent"
        android:textColor="@color/purple_text_button"
        android:textIsSelectable="false"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toTopOf="@+id/nineButton"
        app:layout_constraintEnd_toStartOf="@+id/divisionButton"
        app:layout_constraintStart_toEndOf="@+id/plusMinusButton"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />

    <Button
        android:id="@+id/AcButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_custom_button"
        android:text="@string/text_AC"
        android:textColor="@color/purple_text_button"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toTopOf="@+id/sevenButton"
        app:layout_constraintEnd_toStartOf="@+id/plusMinusButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />


    <Button
        android:id="@+id/eightButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_custom_button"
        android:text="@string/text_eight"
        android:textColor="@color/purple_text_button"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toTopOf="@+id/fiveButton"
        app:layout_constraintEnd_toStartOf="@+id/nineButton"
        app:layout_constraintStart_toEndOf="@+id/sevenButton"
        app:layout_constraintTop_toBottomOf="@+id/plusMinusButton" />

    <Button
        android:id="@+id/nineButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_custom_button"
        android:text="@string/text_nine"
        android:textColor="@color/purple_text_button"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toTopOf="@+id/sixButton"
        app:layout_constraintEnd_toStartOf="@+id/multiplicationButton"
        app:layout_constraintStart_toEndOf="@+id/eightButton"
        app:layout_constraintTop_toBottomOf="@+id/percentButton" />

    <Button
        android:id="@+id/sevenButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_custom_button"
        android:text="@string/text_seven"
        android:textColor="@color/purple_text_button"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toTopOf="@+id/fourButton"
        app:layout_constraintEnd_toStartOf="@+id/eightButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AcButton" />

    <Button
        android:id="@+id/divisionButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_custom2_button"
        android:text="@string/text_division"
        android:textColor="@color/white"
        android:textSize="@dimen/largeSize"
        app:layout_constraintBottom_toTopOf="@+id/multiplicationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percentButton"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />


    <Button
        android:id="@+id/multiplicationButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_custom2_button"
        android:text="@string/text_multiplication"
        android:textColor="@color/white"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toTopOf="@+id/minusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nineButton"
        app:layout_constraintTop_toBottomOf="@+id/divisionButton" />

    <Button
        android:id="@+id/fourButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_custom_button"
        android:text="@string/text_four"
        android:textColor="@color/purple_text_button"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toTopOf="@+id/oneButton"
        app:layout_constraintEnd_toStartOf="@+id/fiveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sevenButton" />

    <Button
        android:id="@+id/fiveButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_custom_button"
        android:text="@string/text_five"
        android:textColor="@color/purple_text_button"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toTopOf="@+id/twoButton"
        app:layout_constraintEnd_toStartOf="@+id/sixButton"
        app:layout_constraintStart_toEndOf="@+id/fourButton"
        app:layout_constraintTop_toBottomOf="@+id/eightButton" />

    <Button
        android:id="@+id/sixButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_custom_button"
        android:text="@string/text_six"
        android:textColor="@color/purple_text_button"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toTopOf="@+id/threeButton"
        app:layout_constraintEnd_toStartOf="@+id/minusButton"
        app:layout_constraintStart_toEndOf="@+id/fiveButton"
        app:layout_constraintTop_toBottomOf="@+id/nineButton" />

    <Button
        android:id="@+id/oneButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_custom_button"
        android:text="@string/text_one"
        android:textColor="@color/purple_text_button"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toTopOf="@+id/zeroButton"
        app:layout_constraintEnd_toStartOf="@+id/twoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourButton" />

    <android.support.constraint.Group
        android:id="@+id/mathOperationGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="plusButton,minusButton,divisionButton,multiplicationButton" />

    <android.support.constraint.Group
        android:id="@+id/numbersGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="zeroButton,oneButton,twoButton,threeButton,fourButton,fiveButton,sixButton,sevenButton,eightButton,nineButton"
        tools:layout_editor_absoluteX="411dp"
        tools:layout_editor_absoluteY="21dp" />


    <Button
        android:id="@+id/twoButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_custom_button"
        android:text="@string/text_two"
        android:textColor="@color/purple_text_button"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toTopOf="@+id/zeroButton"
        app:layout_constraintEnd_toStartOf="@+id/threeButton"
        app:layout_constraintStart_toEndOf="@+id/oneButton"
        app:layout_constraintTop_toBottomOf="@+id/fiveButton" />

    <Button
        android:id="@+id/threeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_custom_button"
        android:text="@string/text_three"
        android:textColor="@color/purple_text_button"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toTopOf="@+id/pointButton"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintStart_toEndOf="@+id/twoButton"
        app:layout_constraintTop_toBottomOf="@+id/sixButton" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_custom2_button"
        android:text="@string/text_plus"
        android:textColor="@color/white"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toTopOf="@+id/equalButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/threeButton"
        app:layout_constraintTop_toBottomOf="@+id/minusButton" />

    <Button
        android:id="@+id/zeroButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_custom_button"
        android:text="@string/text_zero"
        android:textColor="@color/purple_text_button"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pointButton"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oneButton" />

    <Button
        android:id="@+id/pointButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_custom_button"
        android:text="@string/text_point"
        android:textColor="@color/purple_text_button"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equalButton"
        app:layout_constraintStart_toEndOf="@+id/zeroButton"
        app:layout_constraintTop_toBottomOf="@+id/threeButton" />

    <Button
        android:id="@+id/equalButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_custom2_button"
        android:text="@string/text_equal"
        android:textColor="@color/white"
        android:textSize="@dimen/normalSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pointButton"
        app:layout_constraintTop_toBottomOf="@+id/plusButton" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_custom2_button"
        android:text="@string/text_minus"
        android:textColor="@color/white"
        android:textSize="@dimen/veryLargeSize"
        app:layout_constraintBottom_toTopOf="@+id/plusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sixButton"
        app:layout_constraintTop_toBottomOf="@+id/multiplicationButton" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/bg_custom_view"
        android:fontFamily="@font/fontview"
        android:gravity="center_vertical"
        android:textSize="@dimen/hugeSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="238dp"
        android:layout_marginBottom="12dp"
        android:text="@string/text_calculator"
        android:textSize="@dimen/calculatorSize"
        app:layout_constraintBottom_toTopOf="@+id/resultView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>